fix method of hovering text so img doesn't shift

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -168,7 +168,7 @@ div.preview-on-hover img {
 #isotope > .story.hover a.hovertext:hover:after, 
 #isotope > .story.hover a.hovertext:focus:after { opacity: 1.0; }
 
-#isotope > div.story div.preview-on-hover a img {
+#isotope > div.story div.preview-on-hover img {
   filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale"); /* Firefox 10+ */
   filter: grayscale(100%);
   filter: gray; /* IE6-9 */
@@ -179,7 +179,7 @@ div.preview-on-hover img {
   -ms-filter: grayscale(100%);
 }
 
-#isotope > div.story.hover div.preview-on-hover a img {
+#isotope > div.story.hover div.preview-on-hover img {
     filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'1 0 0 0 0, 0 1 0 0 0, 0 0 1 0 0, 0 0 0 1 0\'/></filter></svg>#grayscale");
     -webkit-filter: grayscale(0%);
 	 	-moz-filter: none;
@@ -399,4 +399,32 @@ span.exit {
 	float: right; 
 	padding-right: 20px;
 	cursor: pointer;
+}
+
+div.preview-on-hover figcaption {
+	background: rgba(0,0,0,0.8);
+	color: white;
+	display: table;
+	height: 50px;
+	left: 0;
+	opacity: 0;
+	position: absolute;
+	right: 0;
+	bottom: 0;
+	z-index: 100;
+	width: 100%;	
+	text-align: right;
+	}
+	
+div.preview-on-hover figcaption p {
+	display: table-cell;
+	font-size: 1.5em;
+	position: relative;
+	padding-right: 20px;
+	top: -40px;
+	vertical-align: middle;
+}
+
+div.preview-on-hover:hover figcaption {
+	opacity: 1;
 }
